Metas terminadas, com testes funcionando

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -73,8 +73,24 @@
                                                 <li class="list-group-item">
                                                         <!-- Small button group -->
                                                     <div class="btn-group">
-                                                        <button class="btn btn-default btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false">
-                                                            @temporada.getNumero ª Temporada <span class="caret"></span>
+
+                                                            @if(temporada.getEpisodiosAssistidos == 0) {
+                                                                <button class="btn btn-danger btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false">
+                                                                    @temporada.getNumero ª Temporada
+                                                                Temporada não assistida :(
+                                                            }
+                                                            @if(temporada.getEpisodiosAssistidos < temporada.getEpisodios.size() && temporada.getEpisodiosAssistidos != 0) {
+                                                                <button class="btn btn-warning btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false">
+                                                                    @temporada.getNumero ª Temporada
+                                                                Temporada sendo assistida :)
+                                                            }
+                                                            @if(temporada.getEpisodiosAssistidos == temporada.getEpisodios.size()) {
+                                                                <button class="btn btn-success btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false">
+                                                                    @temporada.getNumero ª Temporada
+                                                                Temporada assistida \o/
+                                                            }
+
+                                                        <span class="caret"></span>
                                                         </button>
                                                         <ul class="dropdown-menu" role="menu">
 
